--- a/basic_html_1.html
+++ b/basic_html_1.html
@@ -1,3 +1,8 @@
-<p><font color="orange" face="Verdana" size="4"></font><b>Orange</b> is my <u>favrite</u> <i>color</i></font></p>
-<p><font color="#FFA07A"face="Impact" size="2"></font><i>All shades of orange suit me</i>.</p>
-<p><img src="Favorite.jpg" width="123" height="123" alt="Best burger ever! MMMMMMMMMM!!" </p>
+<!DOCTYPE html>
+<html>
+    <body>
+    <p><font color="orange" face="Verdana" size="4"></font><b>Orange</b> is my <u>favrite</u> <i>color</i></font></p>
+    <p><font color="#FFA07A"face="Impact" size="2"></font><i>All shades of orange suit me</i>.</p>
+    <p><img src="Favorite.jpg" width="123" height="123" alt="Best burger ever! MMMMMMMMMM!!" </p>
+    </body>
+</html>
