--- a/basic_html_3.html
+++ b/basic_html_3.html
@@ -1,6 +1,7 @@
 <html>
     <head> 
     <title> Welcome </title> 
+    <link rel="stylesheet" type="text/css" href="basic_css_1.css">
     </head>
     <body> 
     <div style="color: orange"> 
