--- a/project/index.html
+++ b/project/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <time>Kid Cudi Fan Website </time>
       <link rel="stylesheet" href="./css/new-2.css">
       <link rel="stylesheet" href="./css/animations.css"> 
     </head>
@@ -21,7 +20,7 @@
         <div id="home">
             <div class="container">
                 <div class="text-center">
-                    <span class="head-main">HOWDY</span>
+                    <span class="head-main">Welcome to the space station!</span>
                 </div>
             </div>
         </div>
@@ -34,11 +33,11 @@
               <!--Photo container1-->
               <div class="photo-container">
                 <div class="photo">
-                    <img src="pics/thumbnail_1.jpg" alt="MOTM3">
+                    <img src="pics/thumbnail-1.jpg" alt="MOTM3">
                 <div class="photo-overlay">
                     <h3>Click to Enlarge</h3>
                     <p>
-                        Special information reguarding the site.
+                        A close up of saturn.
                     </p>
                 </div>
                 </div>  
@@ -47,11 +46,11 @@
               <!--Photo container2-->
               <div class="photo-container">
                 <div class="photo">
-                    <img src="pics/thumbnail_2.jpg" alt="Kids see Ghosts performance">
+                    <img src="pics/thumbnail-2.jpg" alt="Kids see Ghosts performance">
                 <div class="photo-overlay">
                     <h3>Click to Enlarge</h3>
                     <p>
-                        Special information reguarding the site.
+                        A space tornado.
                     </p>
                 </div>
                 </div>  
@@ -60,11 +59,11 @@
               <!--Photo container3-->
               <div class="photo-container">
                 <div class="photo">
-                    <img src="pics/thumbnail_3.jpg" alt="Kids see Ghosts cartoon">
+                    <img src="pics/thumbnail-3.jpg" alt="Kids see Ghosts cartoon">
                 <div class="photo-overlay">
                     <h3>Click to Enlarge</h3>
                     <p>
-                        Special information reguarding the site.
+                    Planet lineup.
                     </p>
                 </div>
                 </div>  
@@ -73,11 +72,11 @@
               <!--Photo container4-->
               <div class="photo-container">
                 <div class="photo">
-                    <img src="pics/thumbnail_4.jpg" alt="Kids see Ghosts settinng">
+                    <img src="pics/thumbnail-4.jpg" alt="Kids see Ghosts settinng">
                 <div class="photo-overlay">
                     <h3>Click to Enlarge</h3>
                     <p>
-                        Special information reguarding the site.
+                     Another planet lineup.
                     </p>
                 </div>
                 </div>  
@@ -86,11 +85,11 @@
               <!--Photo container5-->
               <div class="photo-container">
                 <div class="photo">
-                    <img src="pics/thumbnail_5.jpg" alt="80s style profile pic">
+                    <img src="pics/thumbnail-5.jpg" alt="80s style profile pic">
                 <div class="photo-overlay">
                     <h3>Click to Enlarge</h3>
                     <p>
-                        Special information reguarding the site.
+                     Milkyway.
                     </p>
                 </div>
                 </div>  
@@ -99,11 +98,11 @@
               <!--Photo container6-->
               <div class="photo-container">
                 <div class="photo">
-                    <img src="pics/thumbnail_6.jpg" alt="CUDI portrat">
+                    <img src="pics/thumbnail-6.jpg" alt="CUDI portrat">
                 <div class="photo-overlay">
                     <h3>Click to Enlarge</h3>
                     <p>
-                        Special information reguarding the site.
+                        Earth.
                     </p>
                 </div>
                 </div>  
@@ -112,11 +111,11 @@
               <!--Photo container7-->
               <div class="photo-container">
                 <div class="photo">
-                    <img src="pics/thumbnail_7.jpg" alt="MOTM2">
+                    <img src="pics/thumbnail-7.jpg" alt="MOTM2">
                 <div class="photo-overlay">
                     <h3>Click to Enlarge</h3>
                     <p>
-                        Special information reguarding the site.
+                        View from earth.
                     </p>
                 </div>
                 </div>  
@@ -125,11 +124,11 @@
               <!--Photo container8-->
               <div class="photo-container">
                 <div class="photo">
-                    <img src="pics/thumbnail_8.jpg" alt="Pyrimid MOTM3">
+                    <img src="pics/thumbnail-8.jpg" alt="Pyrimid MOTM3">
                 <div class="photo-overlay">
                     <h3>Click to Enlarge</h3>
                     <p>
-                        Special information reguarding the site.
+                        Too hot to handle
                     </p>
                 </div>
                 </div>  
@@ -138,11 +137,11 @@
               <!--Photo container9-->
               <div class="photo-container">
                 <div class="photo">
-                    <img src="pics/thumbnail_9.jpg" alt="Cudi's blow up hit">
+                    <img src="pics/thumbnail-9.jpg" alt="Cudi's blow up hit">
                     <div class="photo-overlay">
                         <h3>Click to Enlarge</h3>
                         <p>
-                            Special information reguarding the site.
+                            Astronaut.
                         </p>
                     </div>
                 </div>  
@@ -158,23 +157,23 @@
               <div class="heading-padding">
                 <h1 class="heading-padding">Reservations</h1>
                 <div class="reservation">
-                  <h2><span> Become part of the fan club</span>
-                    <br/> learn about meet ups.
+                  <h2><span> Sign up for a space tour today</span>
+                    <br/> learn more about the tour today.
                 </h2>
                 <p class="rsvp-text">
                     Please provide us with your basic contact information.
                 </p>
                 <div class="form-rsvp">
                     <form action="" method="post">
-                        <imput class="rsvp" type="text" value="" placeholder="First Name">
-                        <imput class="rsvp" type="text" value="" placeholder="Last Name">
-                        <imput class="rsvp" type="text" value="" placeholder="Email Address">
-                        <imput class="rsvp" type="text" value="" placeholder="Phone Number"> 
+                        <input class="rsvp" type="text" value="" placeholder="First Name">
+                        <input class="rsvp" type="text" value="" placeholder="Last Name">
+                        <input class="rsvp" type="text" value="" placeholder="Email Address">
+                        <input class="rsvp" type="text" value="" placeholder="Phone Number"> 
                         <div class="form-spacer">
                             <label class="terms">Terms and Conditions</label>
                         </div> 
                         <div class="submit">
-                            <imput type="submit" value="Submit">
+                            <input type="submit" value="Submit">
                         </div> 
                      </form>     
                 </div>
