--- a/one-page website/one_page_website.html
+++ b/one-page website/one_page_website.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="../one-page website /new-1.css">
+        <link rel="stylesheet" href="../one-page website /new.css">
     </head>
     <body>
         <!--NAV-->
-        <div>
-            <div>
-                <nav>
+        <div class="wrap">
+            <div class="menu-container">
+                <nav class="menu">
                     <a href="#home" id=link><li>HOME</li></a>
                      <a href="#gallery"><li>Tools and Ingredients for Juicing GALLERY</li></a>
                     <a href="#contact"><li>Sign Up Form</li></a>
@@ -16,9 +18,9 @@
         <!--End NAV-->
         <!--Home-->
         <div id="home">
-            <div>
-                <div>
-                    <h1>Welcom to the Wellness Juice Home</h1>
+            <div class="container">
+                <div class="text-center">
+                    <h1 class="head-main">Welcom to the Wellness Juice Home</h1>
                 </div>
                 <h3>BENIFITS OF JUICING</h3><br>
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/3J-nMkYUKBc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -26,15 +28,15 @@
         </div>
   <!--End Home-->
   <!--Gallery-->
-  <section>
-      <div>
+  <section id="gallery">
+      <div class="container">
           <h1>Tools and Ingredients</h1>
-          <div id="gallery">
+          <div class="flex-container">
               <!--Photo container1-->
-              <div>
-                <div>
-                    <img src="th.jpg" alt="Any blender">
-                <div>
+              <div class="photo-container">
+                <div class="photo">
+                    <img src="th.jpg" alt="blender">
+                    <div class="photo-overlay">
                     <h3> A blender</h3>
                     <p>
                     Any blender will get the job done! Blending fruits and veggies are a quick and convient way to consume a healthy serving of fruits and veggies to ensure a balanced diet.
@@ -44,10 +46,10 @@
               </div>
               <!--End Photo Container-->
               <!--Photo container2-->
-              <div>
-                <div>
+              <div class="photo-container">
+                <div class="photo">
                     <img src="the.jpg" alt="Filterd Water">
-                <div>
+                <div class="photo-overlay"> 
                     <h3>Filtered Water</h3>
                     <p>
                     Filtered water removes any toxins that my lurk in tap water such as led and floride.
@@ -57,10 +59,10 @@
               </div>
               <!--End Photo Container-->
               <!--Photo container3-->
-              <div>
-                <div>
+              <div class="photo-container">
+                <div class="photo">
                     <img src="th-1.jpg" alt="Spinach">
-                <div>
+                <div class="photo-overlay">
                     <h3>Spinach</h3>
                     <p>
                     </p>
@@ -69,10 +71,10 @@
               </div>
               <!--End Photo Container-->
               <!--Photo container4-->
-              <div>
-                <div>
+              <div class="photo-container">
+                <div class="photo">
                     <img src="th-2.jpg" alt="Kale">
-                <div>
+                <div class="photo-overlay">
                     <h3>Kale</h3>
                     <p>
                     </p>
@@ -81,10 +83,10 @@
               </div>
               <!--End Photo Container-->
               <!--Photo container5-->
-              <div>
-                <div>
+              <div class="photo-container">
+                <div class="photo">
                     <img src="th-3.jpg" alt="Beet">
-                <div>
+                <div class="photo-overlay">
                     <h3>Beet</h3>
                     <p>
                     </p>
@@ -93,10 +95,10 @@
               </div>
               <!--End Photo Container-->
               <!--Photo container6-->
-              <div>
-                <div>
+              <div class="photo-container">
+                <div class="photo">
                     <img src="th-4.jpg" alt="Apple">
-                <div>
+                <div class="photo-overlay"">
                     <h3>Apples</h3>
                     <p>
                     </p>
@@ -105,10 +107,10 @@
               </div>
               <!--End Photo Container-->
               <!--Photo container7-->
-              <div>
-                <div>
+              <div class="photo-container">
+                <div class="photo">
                     <img src="th-5.jpg" alt="Banana">
-                <div>
+                <div class="photo-overlay">
                     <h3>Banana</h3>
                     <p>
                     </p>
@@ -117,10 +119,10 @@
               </div>
               <!--End Photo Container-->
               <!--Photo container8-->
-              <div>
-                <div>
+              <div class="photo-container">
+                <div class="photo">
                     <img src="th-6.jpg" alt="Mango">
-                <div>
+                <div class="photo-overlay">
                     <h3>Mango</h3>
                     <p>
                     </p>
@@ -129,10 +131,10 @@
               </div>
               <!--End Photo Container-->
               <!--Photo container9-->
-              <div>
-                <div>
+              <div class="photo-container">
+                <div class="photo">
                     <img src="th-7.jpg" alt="Rasberry">
-                    <div>
+                    <div class="photo-overlay">
                         <h3>Rasberry</h3>
                         <p>
                         </p>
@@ -145,19 +147,34 @@
   </section>
   <!--END gallery-->
   <!--RSVP-->
-      <div id="contact">
-              <h1>Weekly Juice recipies sign up</h1>
-                  <h2><span> Enroll for weekly Juice recipies  for</span>
+    <div id="contact">
+        <div class="container">
+            <div class="heading-padding">
+              <h1 class="heading-padding">Weekly Juice recipies sign up</h1>
+                  <h2 class="reservation"></div>><span> Enroll for weekly Juice recipies  for</span>
                     <br /> Get a new recipie every week 
                 </h2>
-                <p>
+                <p class="rsvp-text">
                     Please provide us with your basic contact information.
                 </p>
-                    <form action="#" method="post">
-                        Name: <imput type="text" value="First Name"><br>
-                        Email address: <imput type="text" value="Email Address"><br>
-                        <imput type="submit" name="submit"
-                     </form>
+                <div class="form-rsvp">
+                <form action="" method="post">
+                    <input class="rsvp" type="text" value="" placeholder="First Name">
+                    <input class="rsvp" type="text" value="" placeholder="Last Name">
+                    <input class="rsvp" type="text" value="" placeholder="Email Address">
+                    <input class="rsvp" type="text" value="" placeholder="Phone Number"> 
+                    <div class="form-spacer">
+                        <label class="terms">Terms and Conditions</label>
+                    </div> 
+                    <div class="submit">
+                        <input type="submit" value="Submit">
+                    </div> 
+                 </form> 
+                </div>
+            </div>
+        </div>
+    </div>
+      
                     
   <!--END RSVP-->
   <!--FOOTER-->
