--- a/one-page website/one_page_website.html
+++ b/one-page website/one_page_website.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="../one-page website /new-1.css">
-        <link rel="stylesheet" href="../one-page website /new.css">
+        <link rel="stylesheet" href="new-1.css">
+        <link rel="stylesheet" href="new.css">
     </head>
     <body>
         <!--NAV-->
@@ -148,10 +148,10 @@
   <!--END gallery-->
   <!--RSVP-->
     <div id="contact">
-        <div class="container">
+        <div class="reservation">
             <div class="heading-padding">
               <h1 class="heading-padding">Weekly Juice recipies sign up</h1>
-                  <h2 class="reservation"></div>><span> Enroll for weekly Juice recipies  for</span>
+                  <h2 class="reservation"><span> Enroll for weekly Juice recipies  for</span>
                     <br /> Get a new recipie every week 
                 </h2>
                 <p class="rsvp-text">
@@ -179,7 +179,7 @@
   <!--END RSVP-->
   <!--FOOTER-->
   <div>
-     <strong><em> I do not own the rights to the information provited on this site.</em></strong>
+     <strong><em> I do not own the rights to the information provided on this site.</em></strong>
   </div>
   <!--End Footer-->
     </body>
